--- a/projects/pushercoins-master/package.json
+++ b/projects/pushercoins-master/package.json
@@ -12,7 +12,8 @@
     "pusher-js": "^4.1.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "surge": "^0.20.3"
   },
   "scripts": {
     "start:client": "react-scripts start",
